; ModuleID = '/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_memory.c_kkll_m_memory_vm_free.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_memory.c_kkll_m_memory_vm_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_DATA_NOT_ACCEPTED = common dso_local global i32 0, align 4
@POOL_TAG = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kkll_m_memory_vm_free(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i32, i32* @STATUS_DATA_NOT_ACCEPTED, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i64, i64* %2, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i64, i64* %2, align 8
  %9 = load i32, i32* @POOL_TAG, align 4
  %10 = call i32 @ExFreePoolWithTag(i64 %8, i32 %9)
  %11 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %7, %1
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @ExFreePoolWithTag(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
